<resources>
    <string name="app_name">Dahlia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">[Not currently logged in]</string>
    <string name="nav_header_subtitle">[Login/Logout Link HERE]</string>
    <string name="description_nav_header">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_message">Message</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_aupair_nearby">Au Pair Nearby</string>
    <string name="menu_rss_feed">RSS Feed</string>
    <string name="menu_about">About</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_remove_friend">Remove Friend</string>
    <string name="menu_leave_group">Leave Group</string>
    <string name="menu_invite_group">Invite To Group</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_like">Like Post</string>
    <string name="menu_block_user">Block User</string>
    <string name="menu_remove_message">Remove Message</string>
    <string name="menu_remove_post">Remove Post</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_create_post">Create Post</string>
    <string name="title_activity_au_pair_near_by_map">Map</string>
    <string name="login_remember">Remember me</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="signup_username">Username</string>
    <string name="signup_password_confirm">Confirm Password</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_agency">Au Pair Agency</string>
    <string name="profile_title">Profile</string>
    <string name="profile_add_friend">Add Friend</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="description_more_options">More options</string>
    <string name="description_media">Media</string>
    <string name="description_like">Like</string>
    <string name="description_message_fab">Create Message</string>
    <string name="description_group_fab">Create Group</string>
    <string name="description_post_fab">Create Post</string>
    <string name="description_banner">Banner Image</string>
    <string name="description_profile_image">User Profile Image</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Dahlia</string>
    <string name="conversation_message_hint">Enter Message</string>
    <string name="messages_create_message">Message</string>
    <string name="messages_create_to">To:</string>
    <string name="message_send">Send</string>
    <string name="message_add_media">Add Media</string>
    <string name="group_name">Group Name</string>
    <string name="group_btn_create">Create Group</string>
    <string name="nearby_button_enable">Enable</string>
    <string name="nearby_button_disable">Disable</string>
    <string name="nearby_button_refresh">Refresh</string>
    <string name="nearby_button_enabled">Enabled</string>
    <string name="nearby_button_disabled">Disabled</string>
    <string name="post_create_post">Create Post</string>
    <string name="post_send">Post</string>
    <string name="prompt_homefeed_failed">Feed failed to load.</string>
    <string name="prompt_user_load_failed">Loading user failed.</string>
    <string name="prompt_send_message_failed">Message failed to send.</string>
    <string name="prompt_messages_failed">Messages failed to load.</string>
    <string name="prompt_groups_failed">Groups failed to load.</string>
    <string name="prompt_group_created">Group created.</string>
    <string name="prompt_group_error_create">Error creating group.</string>
    <string name="prompt_group_failed_create">Failed to create group.</string>
    <string name="prompt_post_create_failed">Failed to create post.</string>
    <string name="prompt_post_failed_delete">Failed to delete post.</string>
    <string name="prompt_post_failed_send">Failed to create post.</string>
    <string name="prompt_post_sent">Post created.</string>
    <string name="prompt_post_error_send">Error sending post.</string>
    <string name="prompt_post_error_date">Date Error.</string>
    <string name="prompt_signup_same_user">User with this email already exists.</string>
    <string name="prompt_signup_failed">Sign Up Failed</string>
    <string name="prompt_login_failed">"Login failed"</string>
    <string name="prompt_friendslist_failed">Loading FriendsList failed</string>
    <string name="prompt_invalid_username">Not a valid username</string>
    <string name="prompt_invalid_password">Password must be >5 characters</string>
    <string name="prompt_welcome">"Welcome "</string>
    <string name="prompt_message_sent">Message sent.</string>
    <string name="prompt_message_error_send">Error sending message.</string>
    <string name="prompt_message_failed_send">Failed to send message.</string>
    <string name="prompt_nearby_users_failed">Loading NearbyUsers failed.</string>
    <string name="prompt_nearby_created">AuPairNearby user created.</string>
    <string name="prompt_nearby_removed">AuPairNearby location removed.</string>
    <string name="prompt_groups_null">Error loading Groups.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">about_text</string>
    <string name="about_HomeFeed">Home Feed</string>
    <string name="string_textview" />
    <string name="textview">TextView</string>
    <string name="button">Button</string>

    <!--TESTS-->
    <string name="test_activitymain">ActivityMain</string>
    <string name="test_post_word">TEST.(ch=12)</string>
    <string name="test_post_short">This is a test message that is Short length.(ch=51)</string>
    <string name="test_post_medium">This is a test message that is Medium length. The message needs to be a certain length to check if it displays correctly.(ch=129)</string>
    <string name="test_post_long">This is a test message that is Long length. The message needs to be a certain length to check if it displays correctly. The message needs to be slightly longer(ch=167)</string>
    <string name="test_user_liked">Alice Lastname Liked</string>
    <string name="test_post_date_sec">20s</string>
    <string name="test_post_date_min">20m</string>
    <string name="test_post_date_hour">20hr</string>
    <string name="test_post_date_day">20days</string>
    <string name="test_post_date_month">11months</string>
    <string name="test_post_date_date">Nov 20</string>
    <string name="test_post_date_date_long">Nov 2018</string>
    <string name="test_friend_username">-@BobBarker</string>
    <string name="test_friend_display_name">Bob Barker</string>
    <string name="test_friend_imageview_desc">Test Friends ImageView</string>
    <string name="test_message_text_short">Hey! What are you up too???</string>
    <string name="test_message_text_medium">Hey whats up, this is a test message to see how the Messages look.</string>
    <string name="test_group_name">New England Au Pair Group</string>
    <string name="test_group_description">Group of Au Pair members in New England</string>
    <string name="test_profile_location">Williston, VT</string>
    <string name="test_profile_date_created">Created April 14, 2021</string>
    <string name="test_profile_followers">0</string>
    <string name="test_message_from1">Hey how\'s it going</string>
    <string name="test_message_date">Thursday, Apr 21 4:08 PM</string>
    <string name="test_post_username">\@UserName</string>
</resources>

