<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none"
        android:id="@+id/menu_primary">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_messages"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends_icon"
            android:title="@string/menu_friends"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_groups"/>
        <item
            android:id="@+id/nav_aupair_nearby"
            android:icon="@drawable/aupair_nearby_icon"
            android:title="@string/menu_aupair_nearby"/>
        <item
            android:id="@+id/nav_rss_feed"
            android:icon="@drawable/rss_feed_icon"
            android:title="@string/menu_rss_feed"/>
    </group>
    <group android:checkableBehavior="none"
            android:id="@+id/menu_secondary">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/menu_about"
            android:onClick="goAbout"/>
<!--        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/action_settings" />-->
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/title_activity_login"
            android:onClick="goLogin"/>
    </group>
</menu>