<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home_icon"
        android:enabled="true"
        android:onClick="goHome"/>
    <item android:id="@+id/action_friends"
        android:title="@string/menu_friends"
        android:icon="@drawable/friends_icon"
        android:enabled="true"
        android:onClick="goFriends"/>
    <item android:id="@+id/action_groups"
        android:title="@string/menu_groups"
        android:icon="@android:drawable/stat_notify_chat"
        android:enabled="true"
        android:onClick="goGroups"/>
    <item android:id="@+id/action_messages"
        android:title="@string/menu_messages"
        android:icon="@android:drawable/ic_dialog_email"
        android:enabled="true"
        android:onClick="goMessages"/>
</menu>