<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dahlia_android.ui.home.HomeFeedFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_homefeed" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.dahlia_android.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" >
        <action
            android:id="@+id/action_nav_messages_to_nav_conversation"
            app:destination="@id/nav_conversation"
            app:popUpTo="@id/nav_messages" />
    </fragment>

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.dahlia_android.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.dahlia_android.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />
    <fragment
        android:id="@+id/nav_aupair_nearby"
        android:name="com.example.dahlia_android.ui.nearby.AuPairNearbyFragment"
        android:label="Au Pair Nearby"
        tools:layout="@layout/au_pair_nearby_fragment" >
        <action
            android:id="@+id/action_nav_aupair_nearby_to_auPairNearByMapActivity"
            app:destination="@id/auPairNearByMapActivity"
            app:popUpTo="@id/nav_aupair_nearby" />
    </fragment>
    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.example.dahlia_android.ui.user.WelcomeProfileFragment"
        android:label="welcome_profile_fragment"
        tools:layout="@layout/fragment_welcome_profile" />
    <activity
        android:id="@+id/nav_login"
        android:name="com.example.dahlia_android.ui.login.LoginActivity"
        tools:layout="@layout/activity_login"/>
    <activity
        android:id="@+id/nav_signup"
        android:name="com.example.dahlia_android.ui.signup.SignUpActivity"
        tools:layout="@layout/activity_signup" />
    <activity
        android:id="@+id/nav_conversation"
        android:name="com.example.dahlia_android.ui.messages.ConversationActivity"
        android:label="Conversation"
        tools:layout="@layout/activity_conversation" />
    <activity
        android:id="@+id/aboutActivity"
        android:name="com.example.dahlia_android.ui.about.AboutActivity"
        android:label="AboutActivity" />
    <activity
        android:id="@+id/helpActivity"
        android:name="com.example.dahlia_android.ui.help.HelpActivity"
        android:label="HelpActivity" />
    <activity
        android:id="@+id/auPairNearByMapActivity"
        android:name="com.example.dahlia_android.ui.nearby.AuPairNearByMapActivity"
        android:label="activity_au_pair_near_by_map"
        tools:layout="@layout/activity_au_pair_near_by_map" />
</navigation>