<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/text_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:ems="15"
        android:hint="@string/post_create_post"
        android:inputType="textMultiLine"
        android:maxLines="7"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/media_add_post"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/message_add_media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_post"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/send_post"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/post_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/media_add_post"
        app:layout_constraintTop_toTopOf="@+id/media_add_post" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/media_add_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_post" />

    <ImageView
        android:id="@+id/media_image_post"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/text_post"
        app:layout_constraintTop_toBottomOf="@+id/media_add_post" />
</androidx.constraintlayout.widget.ConstraintLayout>