<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conversation_frame_from"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/conversation_friend_profile_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/description_profile_image"
            android:onClick="goToProfile"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@id/conversation_text_friend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/conversation_text_friend"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/conversation_date_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/test_message_date"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/conversation_text_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/conversation_friend_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/conversation_text_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/test_post_long"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/conversation_friend_profile_image"
            app:layout_constraintTop_toBottomOf="@id/conversation_date_from"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>