<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="readPost">


    <LinearLayout
        android:id="@+id/post_layout_whole"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_profile_image"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/post_profile_image_description"
            android:padding="4dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/post_layout_body"
            android:layout_width="318dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_liked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/test_user_liked"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/post_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/test_post_long" />

            <ImageView
                android:id="@+id/post_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/dahlia_logo_yellow_center_png" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/post_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Space
                    android:layout_width="41dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/post_button_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/reply_icon" />

                <Space
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/post_button_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/like_border_icon" />

                <Space
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/post_button_more_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/more_options_1x_icon" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/test_post_date_sec" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>